# agentprey

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  false-positive-report.md
.github/workflows/: ci.yml  publish-crates.yml  release.yml
cli/: Cargo.toml  README.md
cli/benches/: foundations.rs
cli/src/: analyzer.rs  auth.rs  cli.rs  cloud.rs  compare.rs  http_target.rs  lib.rs  main.rs  redaction.rs  scan.rs  scorer.rs  tui.rs
cli/src/config/: mod.rs
cli/src/mcp/: classifier.rs  loader.rs  mod.rs  model.rs
cli/src/output/: compare_html.rs  compare_json.rs  html.rs  json.rs  mod.rs
cli/src/targets/: http.rs  mod.rs  openclaw.rs
cli/src/vectors/: builtin.rs  catalog.rs  loader.rs  mod.rs  model.rs  parser.rs  storage.rs  sync.rs  validator.rs
cli/tests/: cloud_upload.rs  compare_artifacts.rs  compare_command.rs  compare_reporting.rs  e2e_scan.rs  mcp_scan.rs  openclaw_scan.rs  reporting.rs  resilience.rs  scan_json_contract.rs  scan_vectors.rs  test_support.rs
cli/tests/fixtures/: mcp-descriptor.json
cli/tests/fixtures/compare/: baseline.json  candidate.json  unknown-schema.json
cli/vectors/approval-bypass/openclaw/: approval-disabled-risky-defaults.yaml  fallback-path-approval-avoidance.yaml  prompt-guided-approval-bypass.yaml
cli/vectors/openclaw/dependencies/: unpinned-latest-dependency-references.yaml
cli/vectors/openclaw/egress/: outbound-data-exfiltration-channels.yaml
cli/vectors/openclaw/guardrails/: missing-prompt-guardrails.yaml
cli/vectors/openclaw/integrations/: untrusted-remote-mcp-references.yaml
cli/vectors/prompt-injection/direct/: authority-escalation.yaml  basic-override.yaml  role-confusion.yaml  system-prompt-leak.yaml  wrapper-instruction-hijack.yaml
cli/vectors/prompt-injection/indirect/: retrieved-doc-injection.yaml  tool-output-injection.yaml
cli/vectors/prompt-injection/multi-turn/: delayed-reveal-request.yaml  rapport-privilege-escalation.yaml  trust-ladder.yaml
cli/vectors/tool-misuse/openclaw/: dangerous-fallback-prompt-guidance.yaml  dangerous-tool-egress-combination.yaml  unsafe-default-execution-policy.yaml  unsafe-remote-fallback-escalation.yaml  unsafe-shell-execution-without-approval.yaml
crates/agentprey-analyzer/: Cargo.toml
crates/agentprey-analyzer/src/: heuristic.rs  lib.rs  structured.rs
crates/agentprey-core/: Cargo.toml
crates/agentprey-core/src/: lib.rs
crates/agentprey-report/: Cargo.toml
crates/agentprey-report/src/: compare.rs  compare_html.rs  html.rs  json.rs  lib.rs
crates/agentprey-sandbox/: Cargo.toml
crates/agentprey-sandbox/src/: lib.rs
crates/agentprey-vectors/: Cargo.toml
crates/agentprey-vectors/src/: builtin.rs  catalog.rs  lib.rs  model.rs  storage.rs
docs/: artifact-contracts.md  known-limitations.md  release-checklist.md
docs/benchmarks/: 2026-03-14-foundations.md
docs/plans/: 2026-03-10-approval-bypass-foundation.md  2026-03-10-tool-misuse-foundation.md
docs/release-notes/: v0.1.0-beta.1.md  v0.1.2.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.2.0.md  v0.4.0.md  v0.5.0.md
scripts/: beta_smoke.sh  install.sh  mock_agent.py  openclaw_smoke.sh  release_candidate_smoke.sh
vectors/openclaw/permissions/: overprivileged-tool-access.yaml  wildcard-or-missing-scoping.yaml
vectors/prompt-injection/direct/: debug-mode-toggle.yaml  delimiter-escape.yaml  instruction-reset.yaml  policy-override-legalese.yaml  role-confusion.yaml  system-prompt-leak.yaml
vectors/prompt-injection/indirect/: base64-instruction-recovery.yaml  context-window-stuffing.yaml  eval-context-poisoning.yaml  memory-seeding.yaml  quoted-source-injection.yaml  tool-output-injection.yaml
vectors/prompt-injection/multi-turn/: compliance-conditioning.yaml  gradual-escalation.yaml  rapport-privilege-escalation.yaml
vectors/tool-misuse/execution/: unsafe-shell-execution-without-approval.yaml
