[workspace]
members = ["cli", "crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/agentprey/agentprey"
homepage = "https://github.com/agentprey/agentprey"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
console = "0.15"
criterion = { version = "0.5", features = ["html_reports"] }
crossterm = "0.28"
include_dir = "0.7"
indicatif = "0.17"
libc = "0.2"
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3"
tiny_http = "0.12"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
tree-sitter = "0.20"
tree-sitter-python = "0.20"
tree-sitter-typescript = "0.20"
