[package]
name = "agentprey"
version = "0.1.3"
edition = "2021"
description = "Security testing scanner for AI agents"
license = "MIT"
repository = "https://github.com/agentprey/agentprey"
homepage = "https://github.com/agentprey/agentprey"
readme = "README.md"
keywords = ["security", "ai", "cli", "prompt-injection", "testing"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
console = "0.15"
indicatif = "0.17"
include_dir = "0.7"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"
tiny_http = "0.12"
