[package]
name = "agentprey"
version = "0.5.0"
edition.workspace = true
description = "Security testing scanner for AI agents"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords = ["security", "ai", "cli", "prompt-injection", "testing"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
agentprey-analyzer = { path = "../crates/agentprey-analyzer" }
agentprey-core = { path = "../crates/agentprey-core" }
agentprey-report = { path = "../crates/agentprey-report" }
agentprey-sandbox = { path = "../crates/agentprey-sandbox" }
agentprey-vectors = { path = "../crates/agentprey-vectors" }
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
console.workspace = true
crossterm.workspace = true
indicatif.workspace = true
ratatui.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
tokio.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true
tiny_http.workspace = true

[[bench]]
name = "foundations"
harness = false
