[package]
name = "agentprey-core"
version = "0.5.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
agentprey-vectors = { path = "../agentprey-vectors" }
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
