[package]
name = "agentprey-report"
version = "0.5.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
agentprey-core = { path = "../agentprey-core" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
